# cmerg

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish-pypi.yml
cmerg/: erg.py  version.py
mfile/: __init__.py  erg.py  version.py
src/cmerg/: erg.py  version.py
test-data/: Test-Dataset-1_175937.erg.info
