[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmerg"
dynamic = ["version"]
dependencies = [
    "asammdf",
    "numpy",
]
authors = [
    { name="Daniel Hrisca", email="daniel.hrisca@gmail.com" },
]
description = "Python parser for CarMaker ERG files."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
license-files = ["LICEN[CS]E*", "licenses/*"]
keywords = ["carmaker", "erg", "development"]

[project.urls]
Homepage = "https://github.com/danielhrisca/cmerg"

[tool.hatch.version]
path = "src/cmerg/version.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# Ignore rules for unused import and star import in all __init__.py files.
"__init__.py" = ["F401", "F403", "F405"]
